--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "workbench.colorCustomizations": {
         "activityBar.background": "#7b88c4",
+        "activityBar.activeBorder": "#843b48",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99"
     },
